[gd_scene load_steps=5 format=2]

[ext_resource path="res://GraphicalAssets/Bodies/Planet1.png" type="Texture" id=1]
[ext_resource path="res://GraphicalAssets/SystemIcon.png" type="Texture" id=2]
[ext_resource path="res://System/Assets/Planet.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[node name="Planet" type="Node2D"]
script = ExtResource( 3 )

[node name="SelectorIcon" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0.576471, 1, 0.490196 )
scale = Vector2( 1.54443, 1.54443 )
texture = ExtResource( 2 )

[node name="Planet1" type="Sprite" parent="."]
scale = Vector2( 0.275, 0.275 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="RotHelper" type="Node2D" parent="."]

[node name="Satellites" type="Node2D" parent="."]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
